--- a/who-we-are/partners.html
+++ b/who-we-are/partners.html
@@ -360,21 +360,21 @@ background-color: #be0926 !important;
         <tbody>
           <!-- NEXT/PREV MONTH NAV AND MONTH INDICATOR -->
           <tr class="m">
-            <td class="b" nowrap="nowrap"><a href="/who-we-are/partners.html" title="22 Oct 2015"><strong>Oct</strong></a></td>
-            <td class="c" id="displayMonthEl" title="You are here: 07:48:23 Nov 27, 2015">NOV</td>
+            <td class="b" nowrap="nowrap"><a href="/who-we-are/partners.html" title=""><strong>Oct</strong></a></td>
+            <td class="c" id="displayMonthEl" title="">NOV</td>
             <td class="f" nowrap="nowrap">Dec</td>
           </tr>
           <!-- NEXT/PREV CAPTURE NAV AND DAY OF MONTH INDICATOR -->
           <tr class="d">
-            <td class="b" nowrap="nowrap"><a href="/who-we-are/partners.html" title="23:29:05 Oct 22, 2015"><img src="/images/wm_tb_nxt_on.png" alt="Previous capture" width="14" height="16" border="0" /></a></td>
-            <td class="c" id="displayDayEl" style="width:34px;font-size:22px;white-space:nowrap;" title="You are here: 07:48:23 Nov 27, 2015">27</td>
+            <td class="b" nowrap="nowrap"><a href="/who-we-are/partners.html" title=""><img src="/images/wm_tb_nxt_on.png" alt="Previous capture" width="14" height="16" border="0" /></a></td>
+            <td class="c" id="displayDayEl" style="width:34px;font-size:22px;white-space:nowrap;" title="">27</td>
             <td class="f" nowrap="nowrap"><img src="/images/wm_tb_prv_off.png" alt="Next capture" width="14" height="16" border="0" /></td>
           </tr>
           <!-- NEXT/PREV YEAR NAV AND YEAR INDICATOR -->
           <tr class="y">
-            <td class="b" nowrap="nowrap">2014</td>
-            <td class="c" id="displayYearEl" title="You are here: 07:48:23 Nov 27, 2015">2015</td>
-            <td class="f" nowrap="nowrap">2016</td>
+            <td class="b" nowrap="nowrap"></td>
+            <td class="c" id="displayYearEl" title=""></td>
+            <td class="f" nowrap="nowrap"></td>
           </tr>
         </tbody>
       </table>
@@ -583,10 +583,10 @@ window.onload = init16();
 <table class="contentpaneopen">
 	<tr>
 		<td valign="top"><p style="text-align: justify;"><strong style="color: #f29400; font-family: verdana, geneva; font-size: 8pt; line-height: 1.3em;">NIDIAG Workshop, Bamako, Mali</strong></p>
-<p style="text-align: justify;"><span style="font-size: 8pt; font-family: verdana, geneva;"><span style="color: #f29400;">A&nbsp;Workshop dedicated to the&nbsp;<strong>Guideline&nbsp;<strong>Development&nbsp;</strong>for Persistent Digestive Disorders&nbsp;</strong>is being held in Bamako, Mali (November 2015 12th and 13rd).</span></span></p>
+<p style="text-align: justify;"><span style="font-size: 8pt; font-family: verdana, geneva;"><span style="color: #f29400;">A&nbsp;Workshop dedicated to the&nbsp;<strong>Guideline&nbsp;<strong>Development&nbsp;</strong>for Persistent Digestive Disorders&nbsp;</strong>is being held in Bamako, Mali.</span></span></p>
 <p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;"><strong><span style="font-family: verdana, geneva; font-size: 8pt;">September 2015: Consortium meeting in Basel, Switzerland</span></strong></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">The Year 5 Consortium meeting has been held in Basel, Switzerland, on September 2015 the 5th. This meeting gathered together all NIDIAG Partners and they presented and discussed the progresses made in NIDIAG during the last 15 months, under the coordination of the Institute of Tropical Medicines (Antwerpen, Belgium).</span></p></td>
+<p style="text-align: justify;"><strong><span style="font-family: verdana, geneva; font-size: 8pt;">Consortium meeting in Basel, Switzerland</span></strong></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">The Year 5 Consortium meeting has been held in Basel, Switzerland. This meeting gathered together all NIDIAG Partners and they presented and discussed the progresses made in NIDIAG during the last 15 months, under the coordination of the Institute of Tropical Medicines (Antwerpen, Belgium).</span></p></td>
 	</tr>
 	<tr>
         <td valign="top">
