--- a/whoweare.html
+++ b/whoweare.html
@@ -440,12 +440,12 @@
                     <td
                       class="c"
                       id="displayMonthEl"
-                      title="You are here: 04:27:56 Feb 01, 2016"
+                      title="You are here:"
                     >
                       FEB
                     </td>
                     <td class="f" nowrap="nowrap">
-                      <a href="/whoweare.html" title="24 Mar 2016"
+                      <a href="/whoweare.html" title=""
                         ><strong>Mar</strong></a
                       >
                     </td>
@@ -465,12 +465,12 @@
                       class="c"
                       id="displayDayEl"
                       style="width: 34px; font-size: 22px; white-space: nowrap"
-                      title="You are here: 04:27:56 Feb 01, 2016"
+                      title=""
                     >
                       01
                     </td>
                     <td class="f" nowrap="nowrap">
-                      <a href="/whoweare.html" title="11:07:45 Mar 24, 2016"
+                      <a href="/whoweare.html" title=""
                         ><img
                           src="/images/wm_tb_nxt_on.png"
                           alt="Next capture"
@@ -482,17 +482,17 @@
                   </tr>
                   <!-- NEXT/PREV YEAR NAV AND YEAR INDICATOR -->
                   <tr class="y">
-                    <td class="b" nowrap="nowrap">2015</td>
+                    <td class="b" nowrap="nowrap"></td>
                     <td
                       class="c"
                       id="displayYearEl"
-                      title="You are here: 04:27:56 Feb 01, 2016"
+                      title=""
                     >
-                      2016
+                     
                     </td>
                     <td class="f" nowrap="nowrap">
-                      <a href="/whoweare.html" title="29 Jun 2017"
-                        ><strong>2017</strong></a
+                      <a href="/whoweare.html" title=""
+                        ><strong></strong></a
                       >
                     </td>
                   </tr>
@@ -678,8 +678,7 @@
                     Collection:
                     <a style="color: #33f" href="" target="_new"
                       ><span class="wm-title"
-                        >Survey Crawl Number 4 - Started Jan 9th, 2016 - Ended
-                        Feb 25th, 2016</span
+                        >Survey Crawl Number 4</span
                       ></a
                     >
                   </div>
@@ -959,8 +958,7 @@
                           >A second Workshop dedicated to the
                           <strong
                             >Guideline Development for Persistant Fever Syndrome </strong
-                          >will be held in in Yogyakarta, Indonesia, on 12-13
-                          March 2016. This workshop will gather NIDIAG partners
+                          >will be held in in Yogyakarta, Indonesia. This workshop will gather NIDIAG partners
                           involved in these activities and is a crucial step in
                           the frame of NIDIAG project activities, in the
                           elaboration of clinical guidelines for the diagnosis
@@ -982,7 +980,7 @@
                         <span
                           style="font-family: verdana, geneva; font-size: 8pt"
                           >The final Consortium meeting will held in Yogyakarta,
-                          Indonesia, on 14-16 March 2016. This meeting will
+                          Indonesia. This meeting will
                           gather together all NIDIAG Partners and will be the
                           opportunity to present and discuss the latest
                           progresses made in NIDIAG, to review the project as a
