--- a/who-we-are/partners.html
+++ b/who-we-are/partners.html
@@ -387,7 +387,7 @@ background-color: #be0926 !important;
           <a id="wm-save-snapshot-open" href="#" title="Share via My Web Archive" >
             <span class="iconochive-web"></span>
           </a>
-          <a href="https://www.shorturl.at/shortener.php" title="Sign In" id="wm-sign-in">
+          <a href="" title="Sign In" id="wm-sign-in">
             <span class="iconochive-person"></span>
           </a>
           <span id="wm-save-snapshot-in-progress" class="iconochive-web"></span>
@@ -401,11 +401,11 @@ background-color: #be0926 !important;
            title="screenshot">
           <span class="wm-icon-screen-shot"></span>
         </a>
-        <a href="#" id="wm-video" title="video">
+        <a href="" id="wm-video" title="video">
           <span class="iconochive-movies"></span>
         </a>
-        <a id="wm-share-facebook" href="#" data-url="/partners.html" title="Share on Facebook" style="margin-right:5px;" target="_blank"><span class="iconochive-facebook" style="color:#3b5998;font-size:160%;"></span></a>
-        <a id="wm-share-twitter" href="#" data-url="/partners.html" title="Share on Twitter" style="margin-right:5px;" target="_blank"><span class="iconochive-twitter" style="color:#1dcaff;font-size:160%;"></span></a>
+        <a id="wm-share-facebook" href="" data-url="/partners.html" title="Share on Facebook" style="margin-right:5px;" target=""><span class="iconochive-facebook" style="color:#3b5998;font-size:160%;"></span></a>
+        <a id="wm-share-twitter" href="" data-url="/partners.html" title="Share on Twitter" style="margin-right:5px;" target=""><span class="iconochive-twitter" style="color:#1dcaff;font-size:160%;"></span></a>
       </div>
       <div style="padding-right:2px;text-align:right;white-space:nowrap;">
         <a id="wm-expand" class="wm-btn wm-closed" href="#expand" onclick="__wm.ex(event);return false;"><span id="wm-expand-icon" class="iconochive-down-solid"></span> <span class="xxs" style="font-size:80%;">About this capture</span></a>
@@ -419,7 +419,7 @@ background-color: #be0926 !important;
     <div style="padding:3px;position:relative" id="wm-collected-by-content">
             <div style="display:inline-block;vertical-align:top;width:50%;">
 			<span class="c-logo" style="background-image:url(/images/webwidecrawl.jpeg);"></span>
-		Organization: <a style="color:#33f;" href="" target="_new"><span class="wm-title">Alexa Crawls</span></a>
+		Organization: <a style="color:#33f;" href="" target=""><span class="wm-title">Alexa Crawls</span></a>
 		<div style="max-height:75px;overflow:hidden;position:relative;">
 	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
 	  Starting in 1996, <a href="">Alexa Internet</a> has been donating their crawl data to the Internet Archive.  Flowing in every day, these data are added to the <a href="">Wayback Machine</a> after an embargo period.
@@ -427,7 +427,7 @@ background-color: #be0926 !important;
 	      </div>
       <div style="display:inline-block;vertical-align:top;width:49%;">
 			<span class="c-logo" style="background-image:url(/images/wide00013.jpeg)"></span>
-		<div>Collection: <a style="color:#33f;" href="" target="_new"><span class="wm-title">Alexa Crawls</span></a></div>
+		<div>Collection: <a style="color:#33f;" href="" target=""><span class="wm-title">Alexa Crawls</span></a></div>
 		<div style="max-height:75px;overflow:hidden;position:relative;">
 	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
 	  Starting in 1996, <a href="">Alexa Internet</a> has been donating their crawl data to the Internet Archive.  Flowing in every day, these data are added to the <a href="">Wayback Machine</a> after an embargo period.
@@ -475,7 +475,7 @@ background-color: #be0926 !important;
 <a id="menu168" href="/contacts.html">Contacts</a>
 </td> 
 <td id="trans-active16" class="last16"> 
-<a id="menu1610" href="/privateaccess.html" target="_blank">Private access</a>
+<a id="menu1610" href="/privateaccess.html" target="">Private access</a>
 </td> 
 </tr> 
 </table></div> 
@@ -599,7 +599,7 @@ window.onload = init16();
                 <div id="pied_news"></div>
                 </div>
                 <div style="padding-left: 50%; margin-left: -34px;">
-                								<a href="" target="_blank"><div id="fp72"></div></a>
+                								<a href="" target=""><div id="fp72"></div></a>
                 </div>
             </div>
                         <div id="contenu"> <div style="width:493px;">                       
@@ -626,7 +626,7 @@ window.onload = init16();
 <table style="width: 551px; height: 445px;" border="0">
 <tbody>
 <tr>
-<td><a href="" target="_blank"><img style="border: 0px;" alt="ITM" src="" width="100" height="135"/></a></td>
+<td><a href="" target=""><img style="border: 0px;" alt="ITM" src="" width="100" height="135"/></a></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"> </span></span></span><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>Institute of Tropical Medicine (ITM)<br/></strong></span><span style="font-size: 10pt;">Antwerpen, Belgium</span></span></span></p>
@@ -636,7 +636,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target="_blank"><img style="border: 0px;" alt="IT._jpg" src="" width="100" height="18"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="IT._jpg" src="" width="100" height="18"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>Inserm-Transfert SA (IT)<br/></strong>Paris, France<br/><br/></span></span></span><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;">Natacha Edme<br/></span></span>
@@ -648,7 +648,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target="_parent"><img style="border: 0px;" alt="UNIGE70" src="" width="100" height="36"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="UNIGE70" src="" width="100" height="36"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>Université de Genève (UNIGE)<br/></strong>Geneva, Switzerland<br/><br/></span>François Chappuis °<br/>Ninon Horie</span></span></p>
@@ -656,7 +656,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target="_blank"><img style="border: 0px;" alt="391-Lshtm-Logo" src="" width="100" height="122"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="391-Lshtm-Logo" src="" width="100" height="122"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>London School of Hygiene and Tropical Medicine (LSHTM)<br/></strong>London, United-Kingdom<br/><br/></span>Michael Miles °<br/>Rosanna Peeling</span></span></p>
@@ -672,7 +672,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target="_blank"><img style="border: 0px;" alt="ugm_logo" src="" width="100" height="104"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="ugm_logo" src="" width="100" height="104"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>Gadjah Mada University (FM GMU)<br/></strong>Yogyakarta, Indonesia<br/><br/></span>Yodi Mahendradhata °<br/>Riris Andono Ahmad<br/>Bintari Dwihardiani<br/>Elsa Herdiana</span></span></p>
@@ -688,7 +688,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"> <a href="" target="_blank"><img style="border-width: 0px; border-style: none;" alt="Swiss_TPH" src="" width="100" height="36"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"> <a href="" target=""><img style="border-width: 0px; border-style: none;" alt="Swiss_TPH" src="" width="100" height="36"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>Swiss Tropical and Public Health Institute (Swiss TPH)<br/></strong>Basel, Switzerland<br/><br/></span>Jürg Utzinger°<br/>Stefanie Knopp<br/>Peter Steinmann<br/>Penelope Vounatsou <br/>Eliezer K. N'Goran</span></span></p>
@@ -704,7 +704,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target="_blank"><img style="border: 0px;" alt="BPKIHS" src="/web/20151127074823im_/http://www.nidiag.org/images/stories/BPKIHS.jpg" width="100" height="98"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="BPKIHS" src="/web/20151127074823im_/http://www.nidiag.org/images/stories/BPKIHS.jpg" width="100" height="98"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>B.P. Koirala Institute of Health Sciences (BPKIHS)<br/></strong>Dharan, Nepal<br/></span><br/>Suman Rijal°<br/>Basudha Khanal<br/>Bickram Pradhan<br/>Narayan Bhattarai<br/>Surendra Uranw</span></span></p>
@@ -712,7 +712,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target="_blank"><img style="border: 0px;" alt="UNKA" src="" width="100" height="102"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="UNKA" src="" width="100" height="102"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>University of Khartoum (UNKA)<br/></strong>Khartoum, Sudan<br/></span><br/>Sayda El Safi °<br/>Al farazdag Saad Ageed<br/>Osman Salih Osman<br/>Nuha Galal</span></span></p>
@@ -720,7 +720,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target="_blank"><img style="border: 0px;" alt="SHCH" src="" width="100" height="49"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="" target=""><img style="border: 0px;" alt="SHCH" src="" width="100" height="49"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>Sihanouk Hospital Corporation (SHCH)<br/></strong>Phnom Penh, Cambodia / USA<br/></span><br/>Lim Kruy °<br/>Sopheak Thai<br/>Keo Rotha<br/>Teav Syna<br/>Shelly Malhotra</span></span></p>
@@ -728,7 +728,7 @@ window.onload = init16();
 </td>
 </tr>
 <tr>
-<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="/" target="_blank"><img style="border: 0px;" alt="logo_corisbio" src="" width="100" height="54"/></a></span></span></td>
+<td><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><a href="/" target=""><img style="border: 0px;" alt="logo_corisbio" src="" width="100" height="54"/></a></span></span></td>
 <td>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong> </strong></span></span></span></p>
 <p><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="font-size: 10pt;"><strong>CORIS Bioconcept (CORIS)<br/></strong>Belgium<br/></span><br/>Pascal Mertens °<br/></span></span><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;">Thierry Leclipteux</span></span></p>
@@ -758,7 +758,7 @@ window.onload = init16();
 <a id="menu4631" href="../copyright.html">Copyright</a>
 </td> 
 <td class="last46"> 
-<a id="menu4632" href="" target="_blank">By MLCOM</a>
+<a id="menu4632" href="" target="">By MLCOM</a>
 </td> 
 </tr> 
 </table></div> 
